--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="UTF-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="description" name="description">
+  <meta name="google" content="notranslate" />
+  <meta content="Mashup templates have been developped by Orson.io team" name="author">
+
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/apple-icon-180x180.png">
+  <link href="../src/assets/images/favicon.ico" rel="icon">
+
+  <title>Title page</title>  
+
+<link href="../src/assets/css/main.3f6952e4.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      type();
+      movingBackgroundImage();
+    });
+  </script>
+
+
+  <script type="text/javascript" src="../src/assets/Js/main.70a66962.js"></script>
 </body>
 </html>
