home page setup done  with minor corrections

--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,29 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- main Content -->
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
+  <meta content="Krishna Portfolio" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
-  <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/apple-icon-180x180.png">
-  <link href="../src/assets/images/favicon.ico" rel="icon">
-
-  <title>Title page</title>  
-
-<link href="../src/assets/css/main.3f6952e4.css" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="../src/assets/apple-icon-180x180.png">
+  <title>B V K</title>  
+  <!-- main Content -->
 </head>
 <body>
   <app-root></app-root>
-  <script>
-    document.addEventListener("DOMContentLoaded", function (event) {
-      type();
-      movingBackgroundImage();
-    });
-  </script>
 
 
-  <script type="text/javascript" src="../src/assets/Js/main.70a66962.js"></script>
+  
 </body>
 </html>
